# chess-ai

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Bishop.cpp  CMakeLists.txt  Constants.h  Dockerfile  IPiece.h  README.md  build.sh  conanfile.py  main.cpp  setup.sh
.github/workflows/: cmake.yml
profiles/: armv8_macos_release
src/: Board.cpp  Board.h  CMakeLists.txt  Constants.h  Engine.cpp  Engine.h  EventManager.h  IPiece.h  Window.cpp  Window.h  WindowInterface.h  main.cpp
src/events/: CMakeLists.txt  Event.h  EventManager.cpp  EventManager.h
src/piece/: Bishop.cpp  CMakeLists.txt  IPiece.h  King.cpp  Knight.cpp  Pawn.cpp  PieceFactory.cpp  PieceFactory.h  Queen.cpp  Rook.cpp
src/utils/: CMakeLists.txt  Logger.h
tests/: CMakeLists.txt  EngineTests.cpp
tests/piece/: PawnTests.cpp
utils/: Logger.h
